# ODrive-Custom

./: AzuriteConfig  README-21and22.md  README-27.md  README-28and29.md  README.md  __azurite_db_table__.json
.github/: copilot-instructions.md
.github/skills/devops-engineer/: SKILL.md
.github/skills/devops-engineer/scripts/: README.md  push_with_checks.ps1
.github/skills/odrive-qa-assistant/: SKILL.md
.github/skills/odrive-qa-assistant/scripts/: find_symbol.ps1  list_errors_from_yaml.ps1  list_errors_from_yaml.py  run_tests.ps1
.github/workflows/: trigger-site-rebuild.yml
lessons/01-welcome-agenda/: agenda.md
lessons/02-basic features/: demo-script.md  hands-on-exercises.md  readme.md  readme2.md
lessons/03-planning/: ada-to-cpp-migration-plan.md  demo-script.md  hands-on-exercises.md  readme.md  readme2.md  repo-overview.md
lessons/04-agentic-patterns/: demo-script.md  hands-on-exercises.md  readme.md  slides.md
lessons/05-best-practices/: demo-script.md  hands-on-exercises.md  readme.md  readme2.md
lessons/06-debugging/: demo-script.md  hands-on-exercises.md  readme.md  slides.md
lessons/07-copilot-cli/: Troubleshooting  readme.cli.md  readme.md  readme.sdk.md  readme2.md
lessons/08-parallel-agents/: demo-script.md  hands-on-exercise.md  readme.md  slides.md
lessons/09-foundry-local/: readme.md  readme2.md
src-ODrive/: README.md
src-ODrive/.github/: ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  copilot-instructions.md
src-ODrive/.github/agents/: ODrive-Engineer.agent.md  ODrive-Ops.agent.md  ODrive-QA.agent.md  ODrive-Reviewer.agent-Harold.md  ODrive-Reviewer.agent.md  ODrive-Toolchain.agent.md  QA_Enginner.agent.md  ada-to-cpp-migrator.agent.md  firmware-engineer.agent.md  hardware-engineer.agent.md  motor-control-engineer.agent.md
src-ODrive/.github/hooks/: embedded-safety.json  format-check.json
src-ODrive/.github/instructions/: General_Codebase_Standards.instructions.md  Header_File_Rules.instructions.md  Python_Coding_Standards.instructions.md  cpp_coding_standards.instructions.md  header_file_rules.instructions.md
src-ODrive/.github/prompts/: README.md  add-doxygen.prompt.md  analyze-ada-project.prompt.md  audit-todos.prompt.md  build-firmware.prompt.md  check-safety.prompt.md  debug-firmware.prompt.md  debug-motor-error-v2.prompt.md  debug-motor-error.prompt.md  doc-arduino-interface.prompt.md  explain-foc.prompt.md  generate-doctest.prompt.md  generate-tests.prompt.md  migrate-ada-protected.prompt.md  migrate-ada-task.prompt.md  migrate-ada-types.prompt.md  modernize-cpp.prompt.md  ops.prompt.md  refactor-modern-cpp-v2.prompt.md  refactor-modern-cpp.prompt.md  review-code.prompt.md  scaffold-driver.prompt.md  toolchain.prompt.md  tune-motor-controller.prompt.md
src-ODrive/.github/skills/ada-cpp-migration/: SKILL.md
src-ODrive/.github/skills/ada-cpp-migration/references/: ada-cpp-patterns.md
src-ODrive/.github/skills/ada-cpp-migration/templates/: CMakeLists.txt  cyclic_task.hpp  protected_object.hpp  range_type.hpp  strong_type.hpp
src-ODrive/.github/skills/can-protocol/: SKILL.md
src-ODrive/.github/skills/control-algorithms/: SKILL.md
src-ODrive/.github/skills/cpp-testing/: SKILL.md  run-tests.ps1  setup-tests.ps1
src-ODrive/.github/skills/devops-engineer/scripts/: check_workflow_status.ps1  trigger_workflow.ps1
src-ODrive/.github/skills/firmware-debugging/: SKILL.md
src-ODrive/.github/skills/foc-tuning/: SKILL.md
src-ODrive/.github/skills/odrive-ops/: SKILL.md
src-ODrive/.github/skills/odrive-qa-assistant/: README.md  SKILL.md
src-ODrive/.github/skills/odrive-qa-assistant/scripts/: build_firmware.py  list_errors.py  search_symbol.py
src-ODrive/.github/skills/odrive-toolchain/: SKILL.md  build_firmware.py  list_errors.py  search_symbol.py  setup-env.ps1
src-ODrive/.github/skills/pcb-review/: SKILL.md
src-ODrive/.github/skills/python-odrivetool/: SKILL.md
src-ODrive/.github/skills/sensorless-control/: SKILL.md
src-ODrive/.github/skills/signal-integrity/: SKILL.md
src-ODrive/.github/skills/stm32-peripherals/: SKILL.md
src-ODrive/.github/skills/test-automation/: SKILL.md
src-ODrive/Firmware/: Tupfile.lua  manual.html
src-ODrive/Firmware/MotorControl/: acim_estimator.cpp  controller.hpp  demo_buggy.cpp  utils.cpp  utils.hpp
src-ODrive/Firmware/fibre-cpp/: legacy_protocol.cpp
src-ODrive/Firmware/fibre-cpp/Tests/: test_bufptr.cpp
src-ODrive/Firmware/fibre-cpp/include/fibre/: callback.hpp
src-ODrive/example_prompts/: copilot_prompts.txt  project_management_plan.md
src-ODrive/tools/: run_tests.py
src-ODrive/tools/odrive/: utils.py
src-c#/: story.md
